--- a/chronology.html
+++ b/chronology.html
@@ -36,6 +36,7 @@ h1 {
     text-align: center;
 }
   body {background-color: cornsilk;}
+localStorage.setItem('backgroundColor', cornsilk); 
 </style>   
 </head>    
 <body>    
