--- a/edit.html
+++ b/edit.html
@@ -31,7 +31,7 @@
            red = document.querySelector('#redi').value;
            green = document.querySelector('#greeni').value;
            blue = document.querySelector('#bluei').value;
-           localStorage.setItem('backgroundColor', colorStr = "rgb(" + red + "," + green + "," + blue + ")");  
+           colorStr = "rgb(" + red + "," + green + "," + blue + ")";  
        }
        showValues = function() {
          document.querySelector('#redv').innerHTML = document.querySelector("#redi").value;
