--- a/edit.html
+++ b/edit.html
@@ -4,42 +4,44 @@
       
    </head>
    <body>
-         <script>
-         var password = "clh";
-         (function passcodeprotect() {
-            var passcode = prompt("Enter PassCode");
-            while (passcode !== password) {
-               alert("Incorrect PassCode");
-               return passcodeprotect();
-            } 
-         }());
-         
-      </script>
-     <label for="redi">Red:</label>
-     <input type="range" min=0 max=255 id="redi" onmousemove="changeColor()"
-           onmouseup="showValues()" value="125" /> <span id="redv"></span><br>
-     <label for="greeni">Green:</label>
-     <input type="range" min=0 max=255 id="greeni" onmousemove="changeColor()"
-           onmouseup="showValues()" value="125" /><span id="greenv"></span><br>
-     <label for="bluei">Blue:</label>
-     <input type="range" min=0 max=255 id="bluei" onmousemove="changeColor()"
-           onmouseup="showValues()" value="200" /><span id="bluev"></span>
+<script>
+    var password = "clh";
+    (function passcodeprotect() {
+        var passcode = prompt("Enter PassCode");
+        while (passcode !== password) {
+            alert("Incorrect PassCode");
+            return passcodeprotect();
+        }
+    })();
 
-     <br>
-     <script>
-       changeColor = function() {
-           red = document.querySelector('#redi').value;
-           green = document.querySelector('#greeni').value;
-           blue = document.querySelector('#bluei').value;
-           colorStr = "rgb(" + red + "," + green + "," + blue + ")";
-       }
-       showValues = function() {
-         document.querySelector('#redv').innerHTML = document.querySelector("#redi").value;
-         document.querySelector('#greenv').innerHTML = document.querySelector("#greeni").value;
-         document.querySelector('#bluev').innerHTML = document.querySelector("#bluei").value;
-       }
-       window.onload = function() { changeColor(); showValues(); }
-     </script>
+    function changeColor() {
+        var red = document.querySelector("#redi").value;
+        var green = document.querySelector("#greeni").value;
+        var blue = document.querySelector("#bluei").value;
+        var colorStr = "rgb(" + red + "," + green + "," + blue + ")";
+        document.body.style.backgroundColor = colorStr;
+
+        // Save the color in localStorage
+        localStorage.setItem("backgroundColor", colorStr);
+    }
+
+    function showValues() {
+        document.querySelector("#redv").innerHTML = document.querySelector("#redi").value;
+        document.querySelector("#greenv").innerHTML = document.querySelector("#greeni").value;
+        document.querySelector("#bluev").innerHTML = document.querySelector("#bluei").value;
+    }
+
+    window.onload = function() {
+        // Check if a color is saved in localStorage and apply it
+        if (localStorage.getItem("backgroundColor")) {
+            document.body.style.backgroundColor = localStorage.getItem("backgroundColor");
+        }
+
+        changeColor();
+        showValues();
+    }
+</script>
+
             <a href="index.html">Home</a> 
    </body>
 </head>
