--- a/edit.html
+++ b/edit.html
@@ -16,7 +16,7 @@
 </script>
 <label for="redi">Red: </label>
 <input type="range" min=0 max=255 id="redi" onmousemove="changeColor ()" onmouseup="showValues ()" value="125" /> <span id="redv"></span><br>
-<<label for="greeni">Green:</label>
+<label for="greeni">Green:</label>
 <input type="range" min=0 max=255 id="greeni" onmousemove="changeColor ()" onmouseup="showValues ()" value="125" /><span id="greenv"></span><br>
 <label for="bluei">Blue:</label>
 <input type="range" min=0 max=255 id="bluei" onmousemove="changeColor ()" onmouseup="showValues ()" value="200" /><span id="bluev"></span>
