--- a/edit.html
+++ b/edit.html
@@ -12,21 +12,21 @@
             alert("Incorrect PassCode");
             return passcodeprotect();
         }
-    })();
+    }());
 </script>
 <label for="redi">Red: </label>
 <input type="range" min=0 max=255 id="redi" onmousemove="changeColor ()" onmouseup="showValues ()" value="125" /> <span id="redv"></span><br>
 <label for="greeni">Green:</label>
-<input type="range" min=0 max=255 id="greeni" onmousemove="changeColor ()" onmouseup="showValues ()" value="125" /><span id="greenv"></span><br>
+<input type="range" min=0 max=255 id="greeni" onmousemove="changeColor ()" onmouseup="showValues ()" value="125" /> <span id="greenv"></span><br>
 <label for="bluei">Blue:</label>
-<input type="range" min=0 max=255 id="bluei" onmousemove="changeColor ()" onmouseup="showValues ()" value="200" /><span id="bluev"></span>
+<input type="range" min=0 max=255 id="bluei" onmousemove="changeColor ()" onmouseup="showValues ()" value="200" /> <span id="bluev"></span>
 <br>
 <script>
     function changeColor() {
-        var red = document.querySelector("#redi").value;
-        var green = document.querySelector("#greeni").value;
-        var blue = document.querySelector("#bluei").value;
-        var colorStr = "rgb(" + red + "," + green + "," + blue + ")";
+        red = document.querySelector("#redi").value;
+        green = document.querySelector("#greeni").value;
+        blue = document.querySelector("#bluei").value;
+        colorStr = "rgb(" + red + "," + green + "," + blue + ")";
         
         localStorage.setItem("backgroundColor", colorStr);
     }
