--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 <title>Show & Share Homepage</title>  
+<script>
+    window.onload = function() {
+        if (localStorage.getItem("backgroundColor")) {
+            document.body.style.backgroundColor = localStorage.getItem("backgroundColor");
+        }
+    }
+</script>
 <style>
-const color = localStorage.getItem('backgroundColor');
-if (color) {
-    document.body.style.backgroundColor = color;
-}
-
    table, td, th {
     border: 3px solid; 
 }
