--- a/shows.html
+++ b/shows.html
@@ -59,5 +59,16 @@ h1 {
     <td class="column"><a href="themes.html">Theme Song</a></td>
   </tr> 
 </table>
+<table class="center">
+    <tr class="column"><a>Gilmore Girls</a></tr>
+    <tr class="column"><a>Friends</a></tr>
+    <tr class="column"><a>How I Met Your Mother</a></tr>
+    <tr class="column"><a>One Tree Hill</a></tr>
+    <tr class="column"><a>The Middle</a></tr>
+    <tr class="column"><a>New Girl</a></tr>
+    <tr class="column"><a>The Fosters</a></tr>
+    <tr class="column"><a>Beverly Hills 90210</a></tr>
+    <tr class="column"><a>Once Upon a Time</a></tr>
+    <tr class="column"><a>Full House</a></tr>  
 </body>
 </html>
