--- a/shows.html
+++ b/shows.html
@@ -70,5 +70,6 @@ h1 {
     <tr class="column"><a>Beverly Hills 90210</a></tr>
     <tr class="column"><a>Once Upon a Time</a></tr>
     <tr class="column"><a>Full House</a></tr>  
+</table>
 </body>
 </html>
