--- a/shows.html
+++ b/shows.html
@@ -60,7 +60,9 @@ h1 {
   </tr> 
 </table>
 <table class="center">
-    <tr class="column"><a>Gilmore Girls</a></tr>
+    <tr>
+        <td class="column"><a>Gilmore Girls</a></td>
+    </tr>
     <tr class="column"><a>Friends</a></tr>
     <tr class="column"><a>How I Met Your Mother</a></tr>
     <tr class="column"><a>One Tree Hill</a></tr>
