--- a/shows.html
+++ b/shows.html
@@ -21,7 +21,15 @@ table td a {
     text-decoration: none;
 }
     
-table {
+table1 {
+    border-collapse: collapse;
+    width: 50%;
+    text-align: center;
+    font-size: 25px;
+    background-color: snow;    
+}
+
+table2 {
     border-collapse: collapse;
     width: 75%;
     text-align: center;
@@ -47,7 +55,7 @@ h1 {
 </head>    
 <body>    
 <h1>~~~~~ 📺 Show & Share ✏️ ~~~~~</h1>   
-<table class="center">
+<table1 class="center">
   <tr>
     <td class="column"><a href="index.html">Home</a></td>
     <td class="column"><a href="shows.html">Show Name</a></td>
@@ -58,20 +66,38 @@ h1 {
     <td class="column"><a href="facts.html">Trivia</a></td>
     <td class="column"><a href="themes.html">Theme Song</a></td>
   </tr> 
-</table>
-<table class="center">
+</table1>
+<table2 class="center">
     <tr>
         <td class="column"><a>Gilmore Girls</a></td>
     </tr>
-    <tr class="column"><a>Friends</a></tr>
-    <tr class="column"><a>How I Met Your Mother</a></tr>
-    <tr class="column"><a>One Tree Hill</a></tr>
-    <tr class="column"><a>The Middle</a></tr>
-    <tr class="column"><a>New Girl</a></tr>
-    <tr class="column"><a>The Fosters</a></tr>
-    <tr class="column"><a>Beverly Hills 90210</a></tr>
-    <tr class="column"><a>Once Upon a Time</a></tr>
-    <tr class="column"><a>Full House</a></tr>  
-</table>
+    <tr>
+        <td class="column"><a>Friends</a></td>
+    </tr>
+    <tr>
+        <td class="column"><a>How I Met Your Mother</a></td>
+    </tr>
+    <tr>
+        <td class="column"><a>One Tree Hill</a></td>
+    </tr>
+    <tr>
+        <td class="column"><a>The Middle</a></td>
+    </tr>
+    <tr>
+        <td class="column"><a>New Girl</a></td>
+    </tr>
+    <tr>
+        <td class="column"><a>The Fosters</a></td>
+    </tr>
+    <tr>
+        <td class="column"><a>Beverly Hills 90210</a></td>
+    </tr>
+    <tr>
+        <td class="column"><a>Once Upon A Time</a></td>
+    </tr>
+    <tr>
+        <td class="column"><a>Full House</a></td>
+    </tr>
+</table2>
 </body>
 </html>
