--- a/shows.html
+++ b/shows.html
@@ -11,11 +11,17 @@
 </script>
 <style>
     
-table, td, th {
+table1, table2, td, th {
     border: 3px solid; 
 }
 
-table td a {
+table1 td a {
+    display: block;
+    padding: 0.25em 0 0.25em 0.5em;
+    text-decoration: none;
+}
+
+table2 td a {
     display: block;
     padding: 0.25em 0 0.25em 0.5em;
     text-decoration: none;
