--- a/shows.html
+++ b/shows.html
@@ -26,7 +26,7 @@ table {
     width: 75%;
     text-align: center;
     font-size: 25px;
-    background-color: snow;    
+    background-color: sandybrown;    
 }
 
 table.center {
