--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ p {
 <h1>~~~~~ 📺 Show & Share ✏️ ~~~~~</h1>     
 <table class="center">
   <tr>
-    <td class="column"><a href="index.html">Home</a></td>
+    <td class="column"><a href="index.html">Home Page</a></td>
     <td class="column"><a href="shows.html">Show Name</a></td>
     <td class="column"><a href="summaries.html">Summary</a></td>
     <td class="column"><a href="chronology.html">Air Time</a></td>
