--- a/index.html
+++ b/index.html
@@ -63,13 +63,11 @@ p {
 <table class="center">
   <tr>
     <td class="column"><a href="index.html">Home Page</a></td>
-    <td class="column"><a href="shows.html">Show Name</a></td>
-    <td class="column"><a href="summaries.html">Summary</a></td>
-    <td class="column"><a href="chronology.html">Air Time</a></td>
-    <td class="column"><a href="castandcrew.html">Cast & Crew</a></td>
-    <td class="column"><a href="rating.html">Ratings</a></td>
-    <td class="column"><a href="facts.html">Trivia</a></td>
-    <td class="column"><a href="themes.html">Theme Song</a></td>
+    <td class="column"><a href="moviesrank.html">Highest Ranked Movies</a></td>
+    <td class="column"><a href="showsrank.html">Highest Ranked Shows</a></td>
+    <td class="column"><a href="bygenre.html">By Genre</a></td>
+    <td class="column"><a href="streamingplatform.html">By streaming platform</a></td>
+    <td class="column"><a href="myratings.html">My Ratings</a></td>
   </tr> 
 </table>
 <h2>This is a place that you can not only rate and categorize the television shows you've watched, but also see your friends ratings for the same show!</h2>
