--- a/showsrank.html
+++ b/showsrank.html
@@ -50,15 +50,13 @@ localStorage.setItem('backgroundColor', cornsilk);
 <h1>~~~~~ 📺 Show & Share ✏️ ~~~~~</h1>   
 <table class="center">
   <tr>
-    <td class="column"><a href="index.html">Home</a></td>
-    <td class="column"><a href="shows.html">Show Name</a></td>
-    <td class="column"><a href="summaries.html">Summary</a></td>
-    <td class="column"><a href="chronology.html">Air Time</a></td>
-    <td class="column"><a href="castandcrew.html">Cast & Crew</a></td>
-    <td class="column"><a href="rating.html">Ratings</a></td>
-    <td class="column"><a href="facts.html">Trivia</a></td>
-    <td class="column"><a href="themes.html">Theme Song</a></td>
-  </tr> 
+    <td class="column"><a href="index.html">Home Page</a></td>
+    <td class="column"><a href="moviesrank.html">Highest Ranked Movies</a></td>
+    <td class="column"><a href="showsrank.html">Highest Ranked Shows</a></td>
+    <td class="column"><a href="bygenre.html">By Genre</a></td>
+    <td class="column"><a href="streamingplatform.html">By streaming platform</a></td>
+    <td class="column"><a href="myratings.html">My Ratings</a></td>
+  </tr>
 </table>
 </body>
 </html>
