--- a/myratings.html
+++ b/myratings.html
@@ -42,6 +42,9 @@ h1 {
     color: #f05133;
     text-align: center;
 }
+hr {
+    color: black;
+}
   body {background-color: cornsilk;}
 </style>   
 </head>    
