--- a/myratings.html
+++ b/myratings.html
@@ -33,6 +33,10 @@ table.center {
     margin: auto;
 } 
 
+table.left {
+    margin: left;
+} 
+
 td:hover {background-color: snow;}
     
 h1 {
@@ -58,7 +62,7 @@ h1 {
   </tr>
 </table>
 <hr>
-<table class="center">
+<table class="left">
     <tr>
         <td class="column"><a>Gilmore Girls</a></td>
     </tr>
