--- a/myratings.html
+++ b/myratings.html
@@ -52,6 +52,9 @@ h1 {
 <body>    
 <h1>~~~~~ 📺 Show & Share ✏️ ~~~~~</h1>   
 <table class="center">
+    <style>
+        width: auto;
+    </style>
   <tr>
     <td class="column"><a href="index.html">Home Page</a></td>
     <td class="column"><a href="moviesrank.html">Highest Ranked Movies</a></td>
