--- a/myratings.html
+++ b/myratings.html
@@ -21,12 +21,20 @@ table td a {
     text-decoration: none;
 }
  
-table {
+table1 {
     border-collapse: collapse;
     width: 75%;
     text-align: center;
     font-size: 25px;
     background-color: sandybrown;    
+}
+
+table2 {
+    border-collapse: collapse;
+    width: auto;
+    text-align: center;
+    font-size: 25px;
+    background-color: sandybrown;  
 }
 
 table.center {
@@ -51,10 +59,7 @@ h1 {
 </head>    
 <body>    
 <h1>~~~~~ 📺 Show & Share ✏️ ~~~~~</h1>   
-<table class="center">
-    <style>
-        width: auto;
-    </style>
+<table1 class="center">
   <tr>
     <td class="column"><a href="index.html">Home Page</a></td>
     <td class="column"><a href="moviesrank.html">Highest Ranked Movies</a></td>
@@ -63,9 +68,9 @@ h1 {
     <td class="column"><a href="streamingplatform.html">By streaming platform</a></td>
     <td class="column"><a href="myratings.html">My Ratings</a></td>
   </tr>
-</table>
+</table1>
 <hr>
-<table class="left">
+<table2 class="left">
     <tr>
         <td class="column"><a>Gilmore Girls</a></td>
     </tr>
@@ -96,6 +101,6 @@ h1 {
     <tr>
         <td class="column"><a>Full House</a></td>
     </tr>
-</table>
+</table2>
 </body>
 </html>
