--- a/myratings.html
+++ b/myratings.html
@@ -21,20 +21,12 @@ table td a {
     text-decoration: none;
 }
  
-table1 {
+table {
     border-collapse: collapse;
     width: 75%;
     text-align: center;
     font-size: 25px;
     background-color: sandybrown;    
-}
-
-table2 {
-    border-collapse: collapse;
-    width: auto;
-    text-align: center;
-    font-size: 25px;
-    background-color: sandybrown;  
 }
 
 table.center {
@@ -59,7 +51,7 @@ h1 {
 </head>    
 <body>    
 <h1>~~~~~ 📺 Show & Share ✏️ ~~~~~</h1>   
-<table1 class="center">
+<table class="center">
   <tr>
     <td class="column"><a href="index.html">Home Page</a></td>
     <td class="column"><a href="moviesrank.html">Highest Ranked Movies</a></td>
@@ -68,9 +60,12 @@ h1 {
     <td class="column"><a href="streamingplatform.html">By streaming platform</a></td>
     <td class="column"><a href="myratings.html">My Ratings</a></td>
   </tr>
-</table1>
+</table>
 <hr>
-<table2 class="left">
+<table class="left">
+    <style>
+        width: auto;
+    </style>
     <tr>
         <td class="column"><a>Gilmore Girls</a></td>
     </tr>
@@ -101,6 +96,6 @@ h1 {
     <tr>
         <td class="column"><a>Full House</a></td>
     </tr>
-</table2>
+</table>
 </body>
 </html>
