--- a/myratings.html
+++ b/myratings.html
@@ -66,7 +66,7 @@ h1 {
 <hr>
 <table class="left">
     <tr>
-        <td class="column"><a>Gilmore Girls</a></td>
+        <td class="column"><a href="gilmoregirls.html">Gilmore Girls</a></td>
     </tr>
     <tr>
         <td class="column"><a>Friends</a></td>
