--- a/myratings.html
+++ b/myratings.html
@@ -35,8 +35,9 @@ table.center {
 
 table.left {
     margin: left;
+    margin-top: 50px;
     width: auto;
-    font-size: 15px;
+    font-size: 20px;
 } 
 
 td:hover {background-color: snow;}
