--- a/myratings.html
+++ b/myratings.html
@@ -25,7 +25,7 @@ table {
     border-collapse: collapse;
     width: 75%;
     text-align: center;
-    font-size: 25px;
+    font-size: 30px;
     background-color: sandybrown;    
 }
 
@@ -36,6 +36,7 @@ table.center {
 table.left {
     margin: left;
     margin-top: 50px;
+    margin-left: 25px;
     width: auto;
     font-size: 20px;
 } 
