--- a/index.html
+++ b/index.html
@@ -13,22 +13,29 @@
 
 nav {
     float: left;
+    width: 7em;
     background: #FDD;
 }
 
 nav ul {
+     margin: 0;
+     padding: 0;
+     width: 7em;
      background: white;
-     border: 2px solid;
+     border: 1px solid;
 }
 
 nav li {
      position: relative;
      list-style: none;
-     border-bottom: 2px solid #CCC;
+     margin: 0;
+     border-bottom: 1px solid #CCC;
 }
 
 nav ul ul {
     position: absolute;
+    top: 0;
+    left: 7em;
     display: none;
 }
 
