--- a/index.html
+++ b/index.html
@@ -13,23 +13,24 @@
 
 nav {
     float: left;
-    width: 7em;
+    width: 15%;
+    font-size: 25px;
     background: #FDD;
 }
 
 nav ul {
      margin: 0;
      padding: 0;
-     width: 7em;
+     width: 10%;
      background: white;
-     border: 1px solid;
+     border: 2px solid;
 }
 
 nav li {
      position: relative;
      list-style: none;
      margin: 0;
-     border-bottom: 1px solid #CCC;
+     border-bottom: 2px solid #CCC;
 }
 
 nav ul ul {
