--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 nav {
     float: left;
-    width: 15%;
+    width: 7em;
     font-size: 25px;
     background: #FDD;
 }
@@ -21,7 +21,7 @@ nav {
 nav ul {
      margin: 0;
      padding: 0;
-     width: 10%;
+     width: 7em;
      background: white;
      border: 2px solid;
 }
