--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 nav {
     float: left;
     width: 7em;
-    font-size: 25px;
+    font-size: 30px;
     background: #FDD;
 }
 
 nav ul {
-     margin: 0;
+     margin: 10px;
      padding: 0;
      width: 7em;
-     background: white;
+     background: sandybrown;
      border: 2px solid;
 }
 
 nav li {
      position: relative;
      list-style: none;
-     margin: 0;
+     margin: 10px;
      border-bottom: 2px solid #CCC;
 }
 
@@ -55,7 +55,7 @@ nav li.submenu {
 }
 
 nav li.submenu:hover {
-    background-color: #EDD;
+    background-color: snow;
 }
 
 
