--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ nav {
     float: left;
     width: 7em;
     font-size: 30px;
-    background: #FDD;
+    background: sandybrown;
 }
 
 nav ul {
@@ -29,8 +29,8 @@ nav ul {
 nav li {
      position: relative;
      list-style: none;
-     margin: 10px;
-     border-bottom: 2px solid #CCC;
+     margin: 0;
+     border-bottom: 2px solid;
 }
 
 nav ul ul {
@@ -46,9 +46,7 @@ nav li a {
     text-decoration: none;
 }
 
-nav li:hover {
-    background: #6F99F2;
-}
+
 
 nav li.submenu {
     background: url(https://clholtz11.github.io/index.html) 95% 50% no-repeat;
