--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@ nav {
 }
 
 nav ul {
-     margin: 10px;
+     margin-top: 10px;
+     margin-left: 10px;
+     margin-bottom: 10px;
+     margin-right: 0px;
      padding: 0;
      width: 7em;
      background: sandybrown;
