--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@ nav {
 }
 
 nav ul {
-     margin-left: 10px;
+     margin: 0;
      padding: 0;
      width: 7em;
      background: sandybrown;
-     border: 2px solid;
+     border: 1px solid;
 }
 
 nav li {
      position: relative;
      list-style: none;
      margin: 0;
-     border-bottom: 2px solid;
+     border-bottom: 1px solid;
 }
 
 nav ul ul {
