--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@ nav li a {
     text-decoration: none;
 }
 
-
+nav li:hover {
+    background: snow;
+}
 
 nav li.submenu {
     background: url(https://clholtz11.github.io/index.html) 95% 50% no-repeat;
