--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ nav {
     float: left;
     width: 7em;
     font-size: 30px;
+    font-color: #9c5708;
+    font-style: italic;
     background: sandybrown;
 }
 
