--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ nav {
     float: left;
     width: 7em;
     font-size: 30px;
-    font-color: #9c5708;
+    color: #9c5708;
     font-style: italic;
     background: sandybrown;
 }
