--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ nav ul {
      margin: 0;
      padding: 0;
      width: 7em;
-     background: sandybrown;
+     background: white;
      border: 1px solid;
 }
 
