--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@ nav {
     width: 7em;
     font-size: 30px;
     font-style: italic;
-    background: white;
+    background: sandybrown;
 }
 
 nav ul {
      margin: 0;
      padding: 0;
      width: 7em;
+     font-size: 20px;
      background: sandybrown;
      border: 1px solid;
 }
