--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 nav {
     float: left;
     width: 7em;
-    font-size: 30px;
+    font-size: 25px;
     font-style: italic;
     background: sandybrown;
 }
@@ -35,10 +35,10 @@ nav li {
 }
 
 nav ul ul {
-    position: static;
+    position: absolute;
     top: 0;
     left: 7em;
-    font-size: 20px;
+    font-size: 25px;
     display: none;
 }
 
@@ -149,7 +149,7 @@ p {
  </li>
  <li class='submenu'><a href='#'>My Ratings</a>
   <ul class='level2'>
-   <li><a href='#'>Gilmore Girls</a></li>
+   <li><a href="gilmoregirls.html">Gilmore Girls</a></li>
    <li><a href='#'>Friends</a></li>
    <li><a href='#'>How I Met Your Mother</a></li>
    <li><a href='#'>One Tree Hill</a></li>
