--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ h1 {
     
 h2 {
     font-family: Georgia, Serif;
-    font-size: 15px;
+    font-size: 25px;
     color: #9c5708;
     text-align: center;
   
@@ -81,7 +81,7 @@ h2 {
 
 p {
     font-family: "Courier New", Monospace;
-    font-size: 25px;
+    font-size: 35px;
     color: #9c5708;
     text-align: center;
    
@@ -136,9 +136,9 @@ p {
 </ul>
 </nav>
 
-<h2>This is a place that you can not only rate and categorize the television shows you've watched, but also see your friends ratings for the same show!</h2>
+<h2>This is a place that you can not only rate and categorize the television shows you've watched, <br> but also see your friends ratings for the same show!</h2>
 <h2>Here is the site to edit your background colors! <a href="edit.html">Edit</a></h2>
 <p>You can find the link <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc"target="_blank">here</a> 
-    to iMDb for my favorite shows and some inspiration on your next watches 😁 </p>
+    <br> to iMDb for my favorite shows <br> and some inspiration on your next watches 😁 </p>
 </body>
 </html>
