--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@ h1 {
     font-size: 75px;
     color: #f05133;
     text-align: center;
-}
+    background-color: snow;
+}  
     
 h2 {
     font-family: Georgia, Serif;
@@ -90,7 +91,10 @@ p {
 </style>   
 </head>    
 <body>
-<h1>~~~~~ 📺 Show & Share ✏️ ~~~~~</h1>
+<header>
+    <h1>~~~~~ 📺 Show & Share ✏️ ~~~~~</h1>
+</header>
+<section>
 <nav>
 <ul class='level1'>
  <li><a href="index.html">Home Page</a></li>
@@ -135,9 +139,12 @@ p {
  </li>
 </ul>
 </nav>
+<article>
+    <h2>This is a place that you can not only rate and categorize the television shows you've watched, <br> but also see your friends ratings for the same show!</h2>
+    <h2>Here is the site to edit your background colors! <a href="edit.html">Edit</a></h2>
+</article>
+</section>
 
-<h2>This is a place that you can not only rate and categorize the television shows you've watched, <br> but also see your friends ratings for the same show!</h2>
-<h2>Here is the site to edit your background colors! <a href="edit.html">Edit</a></h2>
 <p>You can find the link <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc"target="_blank">here</a> 
     <br> to iMDb for my favorite shows <br> and some inspiration on your next watches 😁 </p>
 </body>
