--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@ nav ul.level1 li.submenu:hover ul.level2, nav ul.level2 li.submenu:hover ul.leve
     display:block;
 }
 
+article {
+  float: left;
+  padding: 20px;
+  width: 70%;
+  background-color: #f1f1f1;
+  height: 300px; /* only for demonstration, should be removed */
+}
+    
 h1 {
     font-family: "Bradley Hand", Cursive;
     font-weight: bold;
