--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ nav ul.level1 li.submenu:hover ul.level2, nav ul.level2 li.submenu:hover ul.leve
 }
 
 article {
-  float: left;
+  float: right;
   padding: 50px;
   width: 75%;
   background-color: #9c5708;
