--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@ footer {
 </ul>
 </nav>
 <article>
-    <h2>This is a place that you can not only rate and categorize the television shows you've watched, <br> but also see your friends ratings for the same show!</h2>
+    <h2>This is a place that you can not only rate and categorize <br> the television shows you've watched, but also <br> see your friends ratings for the same show!</h2>
+    <hr>
     <h2>Here is the site to edit your background colors! <a href="edit.html">Edit</a></h2>
 </article>
 </section>
