--- a/genre-comedy.html
+++ b/genre-comedy.html
@@ -91,15 +91,15 @@ article {
     
 h2 {
     font-family: Georgia, Serif;
-    font-size: 25px;
+    font-size: 50px;
     color: snow;
     text-align: center;
 } 
 
 p {
     font-family: "Courier New", Monospace;
-    font-size: 35px;
-    color: #9c5708;
+    font-size: 40px;
+    color: sandybrown;
     text-align: center;   
 } 
 
@@ -176,7 +176,7 @@ footer {
 <article>
     <h2>Genre</h2>
     <hr>
-    <h2>Comedy</h2>
+    <p>Comedy</p>
 </article>
 </section>
 <footer>
