--- a/genre-comedy.html
+++ b/genre-comedy.html
@@ -94,13 +94,15 @@ h2 {
     font-size: 50px;
     color: snow;
     text-align: center;
+    margin: auto;
 } 
 
 p {
     font-family: "Courier New", Monospace;
     font-size: 40px;
     color: sandybrown;
-    text-align: center;   
+    text-align: center; 
+    margin: auto;
 } 
 
 section::after {
