--- a/moviesrank.html
+++ b/moviesrank.html
@@ -22,33 +22,42 @@ header {
   text-align: center;
   background-color: snow;
   padding: 20px;
-  text-align: center;
-  font-size: 40px; 
+  font-size: 40px;
+  margin: 20px 0px 0px 0px;
+  width: 100%;
 }
+
     
 nav {
-    float: left;
-    font-size: 25px;
-    font-style: italic;
-    background: sandybrown;  
-  	width: 30%;
-  	height: 290px; 
-  	background: #9c5708;
-  	padding: 20px;
+  font-size: 25px;
+  font-style: italic;
+  background: sandybrown;
+  width: 100%;  /* Full width */
+  height: auto; /* Adjust height based on content */
+  padding: 20px;
 }
 
 nav ul {
-     margin: 0;
-     padding: 0;
-     width: 100%;
-     background: sandybrown; 
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: space-around;  /* Distribute items evenly */
+  width: 100%;  /* Full width */
 }
 
 nav li {
-     position: relative;
-     list-style: none;
-     margin: 0;
-     border: 3px solid #9c5708;
+  display: inline-block;
+  width: auto;  /* Adjust each item width dynamically */
+  text-align: center;
+  background-color: #9c5708;
+  padding: 10px;
+}
+
+.content {
+  width: 100%;  /* Ensure the content spans the full width */
+  padding: 20px;
+  background-color: #d3d3d3;
 }
 
 nav ul ul {
