--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 * {
   box-sizing: border-box;
 }
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}    
     
 header {
   font-family: "Bradley Hand", Cursive;
@@ -24,7 +31,6 @@ header {
   padding: 20px;
   text-align: center;
   font-size: 40px;
-  margin: 20px 0px 0px 0px;
 }
     
 nav {
