--- a/genre-drama.html
+++ b/genre-drama.html
@@ -14,6 +14,14 @@
 * {
   box-sizing: border-box;
 }
+
+html, body {
+  margin: 0;
+  margin-top: 20px;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}  
     
 header {
   font-family: "Bradley Hand", Cursive;
