--- a/gilmoregirls.html
+++ b/gilmoregirls.html
@@ -15,6 +15,13 @@
   box-sizing: border-box;
 }
 
+table, th, td {
+  border: 1px solid;
+  width: 75%;
+  color: snow;
+  text-align: center;
+}
+
 html, body {
   margin: 0;
   margin-top: 20px;
@@ -187,7 +194,15 @@ footer {
 </article>
 </section>
 <footer>
-   
+   <table>
+     <tr>
+        <th>Summary</th>
+        <th>Rating & Runtime</th>
+        <th>Main Cast & Crew</th>
+        <th>Trivia</th>
+        <th>Genre, Theme Song, etc.</th>
+     </tr>
+   </table>
 </footer>
 </body>
 </html>
