--- a/gilmoregirls.html
+++ b/gilmoregirls.html
@@ -16,12 +16,18 @@
 }
 
 table, th, td {
-  border: 1px solid;
+  border: 3px ridge;
+}
+
+table {
   width: 75%;
   color: snow;
   text-align: center;
-}
+  align: center;
+}  
 
+tr:hover {background-color: snow;}
+    
 html, body {
   margin: 0;
   margin-top: 20px;
