--- a/gilmoregirls.html
+++ b/gilmoregirls.html
@@ -24,9 +24,10 @@ table {
   color: snow;
   text-align: center;
   align: center;
+  text-color: sandybrown;
 }  
 
-tr:hover {background-color: snow;}
+th:hover {background-color: snow;}
     
 html, body {
   margin: 0;
