--- a/gilmoregirls.html
+++ b/gilmoregirls.html
@@ -23,8 +23,9 @@ table {
   width: 75%;
   color: snow;
   text-align: center;
-  align: center;
-  text-color: sandybrown;
+  margin: auto;
+  color: sandybrown;
+  font_size: 50px;
 }  
 
 th:hover {background-color: snow;}
@@ -136,7 +137,6 @@ section::after {
 footer {
   padding: 10px;
   text-align: center;
-  color: white;
 }
 
 @media (max-width: 600px) {
