--- a/gilmoregirls.html
+++ b/gilmoregirls.html
@@ -25,7 +25,8 @@ table {
   text-align: center;
   margin: auto;
   color: sandybrown;
-  font_size: 50px;
+  font-size: 35px;
+  font-family: "Bradley Hand", Cursive;
 }  
 
 th:hover {background-color: snow;}
