--- a/gilmoregirls.html
+++ b/gilmoregirls.html
@@ -223,6 +223,8 @@ footer {
    <div id="info-box">
       <hr>
       <h3><strong>Click one of the rows to see more information about my #1 show: Gilmore Girls!</strong></h3>
+      <hr>
+      <img src="gilmoregirlspic.jpg">
    </div>
 
    <script>
