--- a/gilmoregirls.html
+++ b/gilmoregirls.html
@@ -15,6 +15,10 @@
   box-sizing: border-box;
 }
 
+div {
+    text-align: center;
+}
+
 table, th, td {
   border: 3px ridge;
 }
@@ -221,10 +225,11 @@ footer {
      </tr>
    </table>
    <div id="info-box">
+       
       <hr>
       <h3><strong>Click one of the rows to see more information about my #1 show: Gilmore Girls!</strong></h3>
       <hr>
-      <img src="gilmoregirlspic.jpg">
+      <img src="https://dnm.nflximg.net/api/v6/BvVbc2Wxr2w6QuoANoSpJKEIWjQ/AAAAQe8tw0VCGrNoOsmYxN6frjj9etN5NxAhQAEhEvySH7IbiMQV5RkoDy2os0hnShW1ZMAiRjuuwkCfIjCSGOiNWdRGcJq3Xn_FYHnqb9M9hH2W2KUrQ80JqWZ93yvbtE1em1m8432foTW_r3GX56WB37UbNPk.jpg">
    </div>
 
    <script>
