--- a/gilmoregirls.html
+++ b/gilmoregirls.html
@@ -248,7 +248,7 @@ function showInfo(title, file) {
           <hr>
           <h2 style="color: #9c5708">${title}</h2>
           <hr>
-          <h3>${data}</h3>
+          <h3 style="width: 75%">${data}</h3>
         `;
       })
       .catch(error => {
