--- a/gilmoregirls.html
+++ b/gilmoregirls.html
@@ -218,10 +218,10 @@ footer {
    <table>
      <tr>
         <th onclick="showInfo('Summary', 'gg_summary.txt')">Summary</th>
-        <th onclick="showInfo('Rating & Runtime', 'gg_raterun')">Rating & Runtime</th>
-        <th onclick="showInfo('Main Cast & Crew', 'gg_castcrew')">Main Cast & Crew</th>
-        <th onclick="showInfo('Trivia', 'gg_trivia')">Trivia</th>
-        <th onclick="showInfo('Genre, Theme Song, etc.', 'gg_genrets')">Genre, Theme Song, etc.</th>
+        <th onclick="showInfo('Rating & Runtime', 'gg_raterun.txt')">Rating & Runtime</th>
+        <th onclick="showInfo('Main Cast & Crew', 'gg_cast.txt')">Main Cast</th>
+        <th onclick="showInfo('Trivia', 'gg_trivia.txt')">Trivia</th>
+        <th onclick="showInfo('Genre, Theme Song, etc.', 'gg_genrets.txt')">Genre, Theme Song, etc.</th>
      </tr>
    </table>
    <div id="info-box">
