--- a/gilmoregirls.html
+++ b/gilmoregirls.html
@@ -217,7 +217,7 @@ footer {
 <footer>
    <table>
      <tr>
-        <th onclick="showInfo('Summary', 'gg_summary.html')">Summary</th>
+        <th onclick="showInfo('Summary', 'gg_summary.txt')">Summary</th>
         <th onclick="showInfo('Rating & Runtime', 'gg_raterun.txt')">Rating & Runtime</th>
         <th onclick="showInfo('Main Cast & Crew', 'gg_cast.txt')">Main Cast</th>
         <th onclick="showInfo('Trivia', 'gg_trivia.txt')">Trivia</th>
