--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ html, body {
 header {
   font-family: "Bradley Hand", Cursive;
   font-weight: bold;
-  color: #f05133;
+  color: #3a5946;
   text-align: center;
-  background-color: snow;
+  background-color: #fee0ae;
   padding: 20px;
   text-align: center;
   font-size: 40px;
@@ -38,7 +38,7 @@ nav {
     float: left;
     font-size: 25px;
     font-style: italic;
-    background: sandybrown;  
+    background: #80a256;  
   	width: 30%;
   	height: 290px; 
   	background: #9c5708;
@@ -49,7 +49,7 @@ nav ul {
      margin: 0;
      padding: 0;
      width: 100%;
-     background: sandybrown; 
+     background: #80a256; 
 }
 
 nav li {
@@ -74,7 +74,7 @@ nav li a {
 }
 
 nav li:hover {
-    background: snow;
+    background: #fee0ae;
 }
 
 nav li.submenu {
@@ -82,7 +82,7 @@ nav li.submenu {
 }
 
 nav li.submenu:hover {
-    background-color: snow;
+    background-color: #fee0ae;
 }
 
 nav ul.level1 li.submenu:hover ul.level2, nav ul.level2 li.submenu:hover ul.level3 {
@@ -93,14 +93,14 @@ article {
   float: left;
   padding: 50px;
   width: 70%;
-  background-color: #9c5708;
+  background-color: #991933;
   height: 290px;
 }
     
 h2 {
     font-family: Georgia, Serif;
     font-size: 25px;
-    color: snow;
+    color: #fee0ae;
     text-align: center;
 } 
 
@@ -120,7 +120,7 @@ section::after {
 footer {
   padding: 10px;
   text-align: center;
-  color: white;
+  color: #fee0ae;
 }
 
 @media (max-width: 600px) {
