--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ nav {
     background: #80a256;  
   	width: 30%;
   	height: 290px; 
-  	background: #9c5708;
+  	background: #e69f46;
   	padding: 20px;
 }
 
