--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ nav li {
      position: relative;
      list-style: none;
      margin: 0;
-     border: 3px solid #66000000;
+     border: 3px solid #e69f46;
 }
 
 nav ul ul {
