--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ nav {
     float: left;
     font-size: 25px;
     font-style: italic;
+    color: #fee0ae;
     background: #80a256;  
   	width: 30%;
   	height: 290px; 
@@ -57,6 +58,7 @@ nav li {
      list-style: none;
      margin: 0;
      border: 3px solid #e69f46;
+     color: #fee0ae;
 }
 
 nav ul ul {
@@ -107,7 +109,7 @@ h2 {
 p {
     font-family: "Courier New", Monospace;
     font-size: 35px;
-    color: #9c5708;
+    color: #fee0ae;
     text-align: center;   
 } 
 
