--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     }
 </script>
 <style>
+
+a {
+    color: #3a5946;
+}
+    
+a:visited {
+    color: #3a5946;
+}
+ 
+a:active {
+    color: #3a5946;
+}
     
 * {
   box-sizing: border-box;
