--- a/friends.html
+++ b/friends.html
@@ -112,7 +112,7 @@ article {
 h2 {
     font-family: Georgia, Serif;
     font-size: 65px;
-    color: snow;
+    color: #3a5946;
     text-align: center;
     margin: auto;
 } 
@@ -120,7 +120,7 @@ h2 {
 p {
     font-family: "Courier New", Monospace;
     font-size: 50px;
-    color: sandybrown;
+    color: #80a256;
     text-align: center; 
     margin: auto;
 } 
