--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@ article {
   float: left;
   padding: 50px;
   width: 70%;
-  background-color: #991933;
+  background-color: #e69f46;
   height: 290px;
 }
     
 h2 {
     font-family: Georgia, Serif;
     font-size: 25px;
-    color: #fee0ae;
+    color: #991933;
     text-align: center;
 } 
 
