--- a/gilmoregirls.html
+++ b/gilmoregirls.html
@@ -85,7 +85,7 @@ nav ul {
      margin: 0;
      padding: 0;
      width: 100%;
-     background: #80a256; 
+     background: #f2f3f8; 
 }
 
 nav li {
