--- a/gilmoregirls.html
+++ b/gilmoregirls.html
@@ -110,7 +110,7 @@ nav li a {
 }
 
 nav li:hover {
-    background: #f2f3f8;
+    background: #59b69a;
 }
 
 nav li.submenu {
@@ -118,7 +118,7 @@ nav li.submenu {
 }
 
 nav li.submenu:hover {
-    background-color: #f2f3f8;
+    background-color: #59b69a;
 }
 
 nav ul.level1 li.submenu:hover ul.level2, nav ul.level2 li.submenu:hover ul.level3 {
